# movutl

./: .gitignore  .gitmodules  :  CMakeLists.txt  README.md  compile_flags.txt
cmake/: config.cmake  doxygen.cmake
examples/: CMakeLists.txt  ae.cpp  assimp_obj.cpp  camera.cpp  clustering.cpp  convex_hull_2d.cpp  cylinder_test.cpp  depth.cpp  editor_io.cpp  img_proc_test.cpp  main.cpp  multi_window.cpp  normal_estimation.cpp  octree_find_nearest.cpp  octree_visualize.cpp  picking-clustering.cpp  picking_object.cpp  plane_fitting_test.cpp  pointcloud.cpp  primitives.cpp  render_to_texture.cpp  sphere_fitting_test.cpp  stl_loader.cpp  teapot.cpp  terrain_test.cpp  text_render.cpp  tmp.cpp  window.cpp
examples/room-mapping/: CMakeLists.txt  README.md  box_builder.hpp  box_test.cpp  droid.cpp  droid.hpp  export_ply.cpp  normal_test.cpp  odometry_view.py  plane_estimation.hpp  room_builder.hpp
examples/simulator/: CMakeLists.txt  env.toml  simulator.cpp  simulator.hpp
lancher/: main.cpp
lancher/runtime/: imgui.lua  imgui_spectrum.lua  init.lua  movutl.lua  ui_styles.lua
misc/: potential.py  rrt.py  surface_reconstruction.py
movutl/: CMakeLists.txt  mu.hpp
movutl/app/: all_widgets.hpp  app.cpp  app.hpp  app_impl.hpp  colors.hpp  init.cpp  io.cpp  io.hpp  key.hpp  track_ctrl.cpp  ui.cpp  ui.hpp  widget.hpp
movutl/asset/: body.cpp  body.hpp  camera.hpp  composition.cpp  composition.hpp  config.cpp  config.hpp  db.cpp  entity.cpp  entity.hpp  filter.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  mesh.cpp  mesh.hpp  mesh_transform.cpp  movie.cpp  movie.hpp  primitive_mesh_creation.cpp  project.cpp  project.hpp  shader.hpp  text.cpp  text.hpp  track.cpp  track.hpp
movutl/asset/impl_io/: assimp_obj_loader.cpp  assimp_ply_loader.cpp  happly_ply_loader.cpp  object_loader.hpp  pcl_pcd_loader.cpp  stl_loader.cpp
movutl/binding/: binding.cpp  binding.hpp  cstring_lua_bind.hpp  imgui_binding.hpp  imgui_custom_values.hpp
movutl/core/: anim.cpp  anim.hpp  array.hpp  assert.cpp  assert.hpp  color.hpp  colors.hpp  core.cpp  core.hpp  covariance.hpp  defines.hpp  file_dialog.cpp  file_dialog.mm  filesystem.cpp  filesystem.hpp  fontrender.cpp  fontrender.hpp  imagebase.hpp  logger.cpp  logger.hpp  octree.cpp  octree.hpp  platform.hpp  pool.hpp  props.cpp  props.hpp  quotanion.hpp  rect.hpp  ref.hpp  rotation_estimator.hpp  spline.hpp  string.cpp  string.hpp  sys_info.hpp  time.hpp  vector.hpp
movutl/core/props/: custom_values.hpp  json_loadsave.cpp
movutl/db/: anim.hpp  block.cpp  block.hpp  body.cpp  bone.hpp  camera.hpp  collection.cpp  collection.hpp  database.hpp  db.hpp  image.hpp  mesh.cpp  mesh.hpp  mesh_transform.cpp  primitives.hpp  project.hpp  world.hpp
movutl/experimental/: CSVreader.hpp  picking_object.cpp  picking_object.hpp  pickle.cpp  pickle.hpp
movutl/graphics/: GLTexture.cpp  GLTexture.hpp  GraphicsManager.hpp
movutl/gui/: gui.cpp  gui.hpp  header_window.cpp  header_window.hpp  inspector.cpp  inspector.hpp  mainmenu.cpp  timeline.cpp  timeline.hpp  timeline_window.cpp  timeline_window.hpp  utilities.cpp  utilities.hpp  viewer.cpp  viewer.hpp  widgets.cpp  widgets.hpp  window.cpp
movutl/instance/: instance.hpp  stb_implementation.cpp
movutl/io/: assimp_obj_loader.cpp  pcl_pcd_loader.cpp  pcl_ply_loader.cpp
movutl/modules/img_processing/: Effects.cpp  FxValue.cpp  Overlay.cpp  Overlay.h  main.cpp
movutl/plugin/: exdata.hpp  filter.cpp  filter.hpp  input.cpp  input.hpp  plugin.cpp  plugin.hpp  plugin_base.cpp
movutl/plugin/default/: image_color_filter.cpp  image_color_filter.hpp  register_default_plugins.cpp  video_reader.cpp  video_reader.hpp
movutl/plugin/modifiers/: downsample.cpp
movutl/plugins/: enums.hpp  plugin_base.hpp
movutl/render/: drawlist.hpp  engine.cpp  engine.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  render.cpp  render.hpp
movutl/render/gl/: context.cpp  image.cpp  shader.cpp
movutl/render/vk/: buffer.cpp  buffer.hpp  context.cpp
movutl/render2d/: render2d.cpp  render2d.hpp
movutl/tester/: tester.hpp
movutl/tools/: camera_auto_rotate.hpp  colormap.hpp  imgutil.hpp  quickhull.hpp  vis_helper.cpp  vis_helper.hpp
movutl/tools/img_processing/: Effects.h  LayerObg.cpp  LayerObj_info.h  README.md  filter.cpp  layer.cpp  object.cpp
movutl/tools/img_processing/effects/bezier/: main.cpp
movutl/tools/img_processing/effects/pixel_sort/: main.cpp
movutl/tools/img_processing/effects/rotation/: main.cpp
movutl/tools/magi/: convex_hull.cpp  convex_hull.hpp  convex_hull_2d.cpp  dbscan.cpp  dbscan.hpp  filter.hpp  fitting.cpp  fitting.hpp  fitting_basic.cpp  fitting_circle.cpp  fitting_cylinder.cpp  fitting_plane.cpp  fitting_sphere.cpp  fitting_terrain.cpp  projection_plane.hpp  region_growing.hpp  surfacing.hpp
movutl/tools/mesh/: clip.cpp  downsample.cpp  meshtools.cpp  meshtools.hpp  normal_estimation.cpp  normal_estimation.hpp  normal_estimation_pcl.cpp
movutl/tools/mesh/segmentation/: cluster.cpp  cluster.hpp  cluster_manager_normal.cpp  cluster_manager_regiongrowing.hpp  cluster_manager_rgb.cpp
movutl/ui/: enum.hpp  icon.hpp  ui.hpp  widget.cpp  window.cpp  window.hpp
plugins/avi_reader/: avi_reader.cpp
pygen/: CMakeLists.txt  LuaTypeWriter.py  LuaintfWriter.py  PropsWriter.py  README.md  SolWriter.py  config.py  main.py  pygen_types.py  utils.py
tests/: CMakeLists.txt  array_loadsave_test.cpp  core.cpp  logger.cpp  mat_test.cpp  octree_test.cpp  progress-bar.cpp  quotanion_test.cpp  rect_test.cpp  shader_test.cpp  spline_test.cpp  string_test.cpp  tester.cpp  vector_test.cpp
